force-app/main/default/objects/ucinn_ascendv2__Object_Mappings__c/ucinn_ascendv2__Object_Mappings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Object Mappings</label>
</CustomObject>