force-app/main/default/objects/ucinn_ascendv2__Object_Mappings__c/fields/ucinn_ascendv2__Field_Mapping_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Field_Mapping_API_Name__c</fullName>
    <inlineHelpText>This is the custom setting that we will create to define the field mappings between the source and target object.</inlineHelpText>
    <label>Field Mapping API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>