force-app/main/default/objects/ucinn_ascendv2__Object_Mappings__c/fields/ucinn_ascendv2__Packaged_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Packaged_API_Name__c</fullName>
    <inlineHelpText>This is the target object we are mapping to.  The Name field is the source object that will be used to map.</inlineHelpText>
    <label>Packaged API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>