force-app/main/default/objects/ucinn_ascendv2__Object_Mappings__c/fields/ucinn_ascendv2__Record_Type_Mapping_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_Type_Mapping_API_Name__c</fullName>
    <label>Record Type Mapping API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>